MazeSolver/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Users/pz/workspace/JavaCrashCource/Day1/Day1/commons-codec-1.10.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/pz/workspace/JavaCrashCource/MazeSolver
-d
/Users/pz/workspace/JavaCrashCource/MazeSolver/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/pz/workspace/JavaCrashCource/MazeSolver/GreedyBreadcrumbSolver.java
<---- end of javadoc command ---->
Loading source file /Users/pz/workspace/JavaCrashCource/MazeSolver/GreedyBreadcrumbSolver.java...
/Users/pz/workspace/JavaCrashCource/MazeSolver/GreedyBreadcrumbSolver.java:6: error: ';' expected
        int northBreadcrumbs
                            ^
1 error
